v0.0.1-CodeCleanup+New Course+JobRQs
Some more code cleanup and javadoc.
Job.payout() is now AbstractCharacter.payout().
Job.getCurrentRank() and rankUp() added as well
as some setters since we took out payout()

Simplified GameState constructor to successive method calls for clarity.

Lastly added a ServSafe course. For Assistant Manger and above Restaurant jobs you must have the Certified title.